--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.10.0",
+    "electron-auto-launch": "^5.0.7",
     "electron-updater": "^6.6.2",
     "node-machine-id": "^1.1.12",
     "react": "^19.1.0",
